# SgodAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release-macos.yml
app/: __init__.py  desktop_backend.py  main.py  settings.py
app/agents/: __init__.py  base.py
app/api/: __init__.py  server.py
app/db/: __init__.py  sqlite_store.py
app/knowledge_graph/: __init__.py  service.py
app/llm/: __init__.py  base.py  openai_compatible.py
app/models/: __init__.py  core.py
app/notifications/: __init__.py  base.py  email.py
app/providers/: __init__.py  akshare_provider.py  asset_search_provider.py  base.py  disclosure_provider.py  registry.py  rss_provider.py  sina_market_provider.py  sina_news_provider.py  yahoo_provider.py
app/reports/: __init__.py  composer.py
app/scoring/: __init__.py  engine.py
app/services/: __init__.py  config_assist.py  intelligence.py  position_window.py
configs/: agents.yaml  config.yaml  email_targets.yaml  llm.yaml  sectors.yaml  sources.yaml  watchlist.yaml
docs/: PRD.md  TECHNICAL_DESIGN.md
ios/SgodAI-iOS/SgodAI-iOS/: ContentView.swift  MobileCoreEngine.swift  SgodAIiOSApp.swift  WebContainer.swift
ios/SgodAI-iOS/SgodAI-iOS.xcodeproj/: project.pbxproj
macos/SgodAI-Mac/SgodAI-Mac/: ContentView.swift  LocalBackend.swift  (+2 more)
macos/SgodAI-Mac/SgodAI-Mac.xcodeproj/: project.pbxproj
public/: app.js  index.html  styles.css
scripts/: build_ios_app.sh  build_macos_app.sh  build_macos_backend.sh  publish_github.sh
tests/: test_api_server.py  test_core_engine.py  test_realdata_adapters.py
