[project]
name = "sgodai-market-radar"
version = "0.2.0"
description = "Local-first AI-assisted market intelligence and research support system."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.optional-dependencies]
realdata = [
  "akshare>=1.14.0",
  "fastapi>=0.111.0",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
